[gd_scene load_steps=3 format=3 uid="uid://6i5h1tdoctk6"]

[ext_resource type="Theme" uid="uid://bp7ntkss4y7ms" path="res://scenes/theme.tres" id="1_86snt"]
[ext_resource type="Script" path="res://scenes/popups/controls_info_popup.gd" id="2_rjsrv"]

[node name="ControlsInfoPopup" type="Window"]
title = "Controls"
initial_position = 2
size = Vector2i(368, 222)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
popup_window = true
theme = ExtResource("1_86snt")
script = ExtResource("2_rjsrv")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="PanLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Pan!"
fit_content = true
autowrap_mode = 0

[node name="ZoomLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Zoom!"
fit_content = true
autowrap_mode = 0

[node name="PenAndEraserLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Pen and eraser!"
fit_content = true
autowrap_mode = 0

[node name="ColorSamplerLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Color sampler!"
fit_content = true
autowrap_mode = 0

[node name="ColorPickerLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Color picker!"
fit_content = true
autowrap_mode = 0

[connection signal="close_requested" from="." to="." method="hide"]
